<resources>
    <string name="app_name">TwitterClone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one">Create One</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="join_now">Join Now</string>
    <string name="title_activity_content">ActivityContent</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="Twitter">Twitter</string>
    <string name="EditTweet">Edit Tweet</string>
    <string name="CreateTweet">Create Tweet</string>
    <string name="what_are_yout_thinking_about">What are yout thinking about?</string>
    <string name="image_url">Image Url</string>
    <string name="edit">Edit</string>
    <string name="image_preview">Image Preview</string>
    <string name="tweet">Tweet</string>
    <string name="image">Image</string>
    <string name="profile_image">Profile Image</string>
    <string name="tweet_options">Tweet Options</string>
    <string name="placeholder_text">PlaceHolder Text</string>
    <string name="image_banner">Image Banner</string>
    <string name="user_and_pass_dont_match">User and password does not match.</string>
    <string name="all_fileds_must_be_completed">All the fields must be completed.</string>
    <string name="error">Error</string>
    <string name="not_name_avalible">Username not avalible, try with another.</string>
    <string name="pass_confirm_not_match">The Passwords does not match, write it again.</string>
    <string name="not_tweet_updated">The Tweet has not been Updated, try again.</string>
    <string name="can_not_create_tweet">We couldn\'t create the Tweet. Try again later.</string>
</resources>